--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
   </head>
 
   <body>
+    <% if user_signed_in? %>  
+      <p>Hola <%= current_user.email %></p>
+      <%= button_to 'Salir', destroy_user_session_path, method: :delete%>
+    <% end %>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
